--- a/app/views/impact_cards/thematic_map/_graph.html.erb
+++ b/app/views/impact_cards/thematic_map/_graph.html.erb
@@ -29,7 +29,18 @@
     </div>
   <% end %>
   <div>
-    <button type="button" role="menuitem" aria-haspopup="menu" aria-expanded="false" data-state="closed" class="inline-flex px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500" data-thematic-map-target="toggleLabelsButton">Labels</button>
+    <button
+      type="button"
+      role="menuitem"
+      aria-haspopup="menu"
+      aria-expanded="false"
+      data-state="closed"
+      class="'relative isolate inline-flex items-center justify-center gap-x-2 rounded-lg border border-zinc-500 text-sm font-semibold rounded-md bg-zinc-950 dark:bg-zinc-600 px-3 py-1 font-semibold text-white shadow-sm hover:bg-zinc-400 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-zinc-500"
+      data-thematic-map-target="toggleLabelsButton"
+    >
+      Labels
+    </button>
+    <%= render 'theme_controls' if local_assigns[:theme_controls_visible] %>
   </div>
 </div>
 
@@ -64,21 +75,6 @@
   </div>
 </div>
 
-<div id="dialog-wrapper">
-  <dialog id="dialog" data-thematic-map-target="dialog" class="rounded-md bg-white px-4 pb-4 pt-5 text-left shadow-xl text-green-400">
-    <div class="flex justify-between">
-      <div class="flex items-center space-x-2">
-        <div class="h-4 w-4 rounded-full" data-thematic-map-target="dialogTitleColor"></div>
-        <h2 class="text-lg font-semibold text-zinc-950 dark:text-black" data-thematic-map-target="dialogTitle"></h2>
-      </div>
-      <h2 class="text-lg font-semibold text-zinc-950 dark:text-black" data-thematic-map-target="dialogTitle"></h2>
-      <button data-thematic-map-target="closeDialog" class="text-zinc-500 dark:text-white hover:text-zinc-700 dark:hover:text-white" aria-label="Close dialog">
-        <svg class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
-        </svg>
-      </button>
-    </div>
-    <div class="mt-4" data-thematic-map-target="dialogContent"></div>
-  </dialog>
-</div>
+<%= render 'graph_dialog', data_controller: 'thematic-map' %>
+
 <div class="min-h-screen" data-thematic-map-target="map"></div>
