--- a/app/views/shared/stakeholder_network.html.erb
+++ b/app/views/shared/stakeholder_network.html.erb
@@ -2,5 +2,5 @@
 <div class="mx-auto max-w-6xl" data-controller="stakeholder-network">
   <%= render 'shared/summary', impact_card: @scorecard %>
   <%= render 'shared/tabs', impact_card: @scorecard %>
-  <%= render 'impact_cards/stakeholder_network/graph', impact_card: @scorecard %>
+  <%= render 'impact_cards/stakeholder_network/graph', impact_card: @scorecard, theme_controls_visible: true %>
 </div>
