--- a/app/views/shared/thematic_map.html.erb
+++ b/app/views/shared/thematic_map.html.erb
@@ -3,6 +3,5 @@
 <div class="mx-auto max-w-6xl" data-controller="thematic-map">
   <%= render 'shared/summary', impact_card: @scorecard %>
   <%= render 'shared/tabs', impact_card: @scorecard %>
-
-  <%= render 'impact_cards/thematic_map/graph', impact_card: @scorecard %>
+  <%= render 'impact_cards/thematic_map/graph', impact_card: @scorecard, theme_controls_visible: true %>
 </div>
