--- a/app/views/application/_graph_dialog.html.erb
+++ b/app/views/application/_graph_dialog.html.erb
@@ -1,4 +1,4 @@
-<div id="dialog-wrapper">
+<div id="dialog-wrapper" class="print:hidden">
   <dialog id="dialog" data-<%= data_controller %>-target="dialog" class="[&_a]:text-blue-500 max-w-lg rounded-md bg-white dark:bg-black px-4 pb-4 pt-5 text-left shadow-xl text-black dark:text-white">
     <div class="flex justify-between">
       <div class="flex items-center space-x-2">
