--- a/app/views/impact_cards/_tabs.html.erb
+++ b/app/views/impact_cards/_tabs.html.erb
@@ -1,4 +1,4 @@
-  <div>
+  <div class="print:hidden">
     <div class="grid grid-cols-1 sm:hidden">
       <!-- TODO: Use an "onChange" listener to redirect the user to the selected tab URL. Add 'selected' attribute for current page -->
       <select aria-label="Select a tab" class="col-start-1 row-start-1 w-full appearance-none rounded-md bg-white py-2 pl-3 pr-8 text-base text-gray-900 outline outline-1 -outline-offset-1 outline-gray-300 focus:outline focus:outline-2 focus:-outline-offset-2 focus:outline-indigo-600">
