--- a/app/views/impact_cards/stakeholder_network/_graph.html.erb
+++ b/app/views/impact_cards/stakeholder_network/_graph.html.erb
@@ -1,7 +1,7 @@
 <div class="flex justify-between items-center mb-4">
 
   <%= form_with url: impact_card_stakeholder_network_index_path(impact_card), method: :get, data: { grid_target: 'filterForm' } do |form| %>
-    <div class="flex space-x-4">
+    <div class="flex space-x-4 print:hidden">
       <div class="pt-2 flex justify-center items-center"><span class="text-sm font-medium text-gray-900 dark:text-white">Filter by:</span></div>
       <div>
         <%= form.label :stakeholder_types, class: "block text-sm font-medium text-gray-700 dark:text-gray-300 sr-only" %>
@@ -23,7 +23,7 @@
       aria-haspopup="menu"
       aria-expanded="false"
       data-state="closed"
-      class="'relative isolate inline-flex items-center justify-center gap-x-2 rounded-lg border border-zinc-500 text-sm font-semibold rounded-md bg-zinc-950 dark:bg-zinc-600 px-3 py-1 font-semibold text-white shadow-sm hover:bg-zinc-400 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-zinc-500"
+      class="relative isolate inline-flex items-center justify-center gap-x-2 rounded-lg border border-zinc-500 text-sm font-semibold rounded-md bg-zinc-950 dark:bg-zinc-600 px-3 py-1 font-semibold text-white shadow-sm hover:bg-zinc-400 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-zinc-500 print:hidden"
       data-stakeholder-network-target="toggleLabelsButton"
     >
       Labels
@@ -62,3 +62,23 @@
 <%= render 'graph_dialog', data_controller: 'stakeholder-network' %>
 
 <div class="min-h-screen" data-stakeholder-network-target="map"></div>
+
+<div class="hidden print:flex border border-black p-4 mt-6 rounded-lg break-before-page">
+  <div class="flex justify-between items-center">
+    <div class="flex flex-col space-y-2">
+      <h4 class="text-md font-bold print:text-black">Filters</h4>
+      <div class="flex items-center space-x-2 mb-4 hidden sr:hidden" data-stakeholder-network-target="selectedStakeholderTypesForPrintContainer">
+        <span class="text-sm font-medium text-gray-900 dark:text-white print:text-gray-900 print:dark:text-gray-900">Selected stakeholder types:</span>
+        <div class="mt-3 flex flex-wrap gap-2" data-stakeholder-network-target="selectedStakeholderTypesForPrint">
+          <% @selected_stakeholder_types.each do |stakeholder_type| %>
+            <span class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-zinc-500 text-white" >
+              <%= stakeholder_type.name %>
+            </span>
+          <% end %>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<%= render 'legend', items: @legend_items %>
