--- a/app/views/impact_cards/thematic_map/_graph.html.erb
+++ b/app/views/impact_cards/thematic_map/_graph.html.erb
@@ -1,4 +1,4 @@
-<div class="flex justify-between items-center mb-4">
+<div class="flex justify-between items-center mb-4 print:hidden">
 
   <%= form_with url: impact_card_stakeholder_network_index_path(impact_card), method: :get, data: { grid_target: 'filterForm' } do |form| %>
     <div class="flex space-x-4">
@@ -35,7 +35,7 @@
       aria-haspopup="menu"
       aria-expanded="false"
       data-state="closed"
-      class="'relative isolate inline-flex items-center justify-center gap-x-2 rounded-lg border border-zinc-500 text-sm font-semibold rounded-md bg-zinc-950 dark:bg-zinc-600 px-3 py-1 font-semibold text-white shadow-sm hover:bg-zinc-400 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-zinc-500"
+      class="relative isolate inline-flex items-center justify-center gap-x-2 rounded-lg border border-zinc-500 text-sm font-semibold rounded-md bg-zinc-950 dark:bg-zinc-600 px-3 py-1 font-semibold text-white shadow-sm hover:bg-zinc-400 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-zinc-500"
       data-thematic-map-target="toggleLabelsButton"
     >
       Labels
@@ -78,3 +78,28 @@
 <%= render 'graph_dialog', data_controller: 'thematic-map' %>
 
 <div class="min-h-screen" data-thematic-map-target="map"></div>
+
+<div class="flex items-center space-x-2 mb-4 hidden sr:hidden" data-thematic-map-target="selectedStakeholdersForPrintContainer">
+  <span class="text-sm font-medium text-gray-900 dark:text-white print:text-gray-900 print:dark:text-gray-900">Selected stakeholders:</span>
+  <div class="mt-3 flex flex-wrap gap-2" data-thematic-map-target="selectedStakeholdersForPrint">
+    <% @selected_stakeholders.each do |stakeholder| %>
+      <span class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-zinc-500 text-white" >
+        <%= stakeholder.name %>
+      </span>
+    <% end %>
+  </div>
+</div>
+
+<div class="flex items-center space-x-2 mb-4 hidden sr:hidden" data-thematic-map-target="selectedInitiativesForPrintContainer">
+  <span class="text-sm font-medium text-gray-900 dark:text-white print:text-gray-900 print:dark:text-gray-900 ">Selected initiatives:</span>
+  <div class="mt-3 flex flex-wrap gap-2" data-thematic-map-target="selectedInitiativesForPrint">
+    <% @selected_initiatives.each do |initiative| %>
+      <span class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-zinc-500 text-white">
+        <%= initiative.name %>
+      </span>
+    <% end %>
+  </div>
+</div>
+
+
+<%= render 'legend', items: @legend_items %>
