--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,11 +13,11 @@
   </head>
   <body data-controller="theme">
     <%= render 'layouts/shared/flash_messages' %>
-    <div class="relative isolate flex min-h-svh w-full bg-white max-lg:flex-col lg:bg-zinc-100 dark:bg-zinc-900 dark:lg:bg-zinc-950">
+    <div class="relative isolate flex min-h-svh w-full bg-white max-lg:flex-col dark:bg-zinc-900 dark:lg:bg-zinc-950 print:bg-white print:dark:bg-white">
       <%#= render partial: 'layouts/shared/sidebar_mobile' %>
       <%= render partial: 'layouts/shared/sidebar_desktop' %>
-      <main class="flex flex-1 flex-col pb-2 lg:min-w-0 lg:pl-60 m-3">
-        <div class="grow p-6 lg:rounded-lg lg:bg-white lg:p-10 lg:shadow-sm lg:ring-1 dark:bg-zinc-900 lg:ring-zinc-950/5 dark:lg:ring-white/10">
+      <main class="flex flex-1 flex-col pb-2 lg:min-w-0 lg:pl-60 m-3 print:m-0 print:p-0">
+        <div class="grow p-6 lg:rounded-lg lg:bg-white lg:p-10 lg:shadow-sm lg:ring-1 dark:bg-zinc-900 print:bg-white dark:print:bg-white lg:ring-zinc-950/5 dark:lg:ring-white/10 print:rounded-none print:p-0 print:shadow-none print:ring-none">
 
           <%= yield %>
         </div>
