1067 fixed more issues with shared impact cards

--- a/app/views/application/_theme_controls.html.erb
+++ b/app/views/application/_theme_controls.html.erb
@@ -2,5 +2,5 @@
   "Dark mode &checkmark;".html_safe,
   '',
   data: { controller: 'theme-toggle', theme_toggle_target: 'toggle', action: 'theme-toggle#toggle' },
-  class: 'relative isolate inline-flex items-center justify-center gap-x-2 rounded-lg border border-zinc-500 text-sm font-semibold rounded-md bg-zinc-950 dark:bg-zinc-600 px-3 py-1 font-semibold text-white shadow-sm hover:bg-zinc-400 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-zinc-500'
+  class: 'relative isolate inline-flex items-center justify-center gap-x-2 rounded-lg border border-zinc-500 text-sm font-semibold rounded-md bg-zinc-950 dark:bg-zinc-600 px-3 py-1 font-semibold text-white shadow-sm hover:bg-zinc-400 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-zinc-500 print:hidden'
 ) %>
