--- a/app/views/shared/show.html.erb
+++ b/app/views/shared/show.html.erb
@@ -1,5 +1,5 @@
 <div class="mx-auto max-w-6xl">
-  <%= render 'shared/summary', impact_card: @scorecard %>
+  <%= render 'shared/summary', impact_card: @scorecard, print_description: true %>
   <%= render 'shared/tabs', impact_card: @scorecard %>
   <div>
     <%= render 'impact_cards/grid', impact_card: @scorecard, impact_card_grid: @scorecard_grid, search_url: shared_path(@scorecard.shared_link_id), theme_controls_visible: true %>
