--- a/app/views/layouts/embedded.html.erb
+++ b/app/views/layouts/embedded.html.erb
@@ -13,9 +13,9 @@
   </head>
   <body data-controller="theme">
     <%= render 'layouts/shared/flash_messages' %>
-    <div class="relative isolate flex min-h-svh w-full bg-white max-lg:flex-col lg:bg-zinc-100 dark:bg-zinc-900 dark:lg:bg-zinc-950">
-      <main class="flex flex-1 flex-col pb-2 lg:min-w-0 m-3">
-        <div class="grow lg:bg-white lg:p-10 dark:bg-zinc-900">
+    <div class="relative isolate flex min-h-svh w-full bg-white max-lg:flex-col lg:bg-zinc-100 dark:bg-zinc-900 dark:lg:bg-zinc-950 print:bg-white print:dark:bg-white">
+      <main class="flex flex-1 flex-col pb-2 lg:min-w-0 m-3 print:m-0 print:p-0">
+        <div class="grow lg:bg-white lg:p-10 dark:bg-zinc-900 print:bg-white dark:print:bg-white">
           <%= yield %>
         </div>
       </main>
