--- a/app/views/shared/_summary.html.erb
+++ b/app/views/shared/_summary.html.erb
@@ -2,9 +2,9 @@
   <div class="flex-1">
     <div>
       <div class="flex flex-wrap items-center gap-x-4 gap-y-2">
-        <h1 class="text-2xl/8 font-semibold text-zinc-950 sm:text-xl/8 dark:text-white><%= impact_card.name %></h1>
+        <h1 class="text-2xl/8 font-semibold text-zinc-950 sm:text-xl/8 dark:text-white print:text-black dark:print:text-black"><%= impact_card.name %></h1>
       </div>
-      <div class="mt-2 text-sm/6 text-zinc-500"><%= sanitize(impact_card.description) %></div>
+      <div class="mt-2 text-sm/6 text-zinc-500 print:text-black dark:print:text-black  <%= local_assigns[:print_description] ? "print:text-black dark:print:text-black" : "print:hidden" %>"><%= sanitize(impact_card.description) %></div>
     </div>
   </div>
 </div>
