--- a/app/views/impact_cards/_impact_card.html.erb
+++ b/app/views/impact_cards/_impact_card.html.erb
@@ -15,11 +15,7 @@
         </div>
 
         <div class="flex space-x-4">
-
-          <div class="inline-flex rounded-lg items-center justify-center bg-red-950 dark:bg-red-500 text-white" title="Type: <%= impact_card.type.titleize %>">
-            <p class="py-1 px-2 text-xs"><%= impact_card.type.titleize %></p>
-          </div>
-
+          <%= render 'impact_card_type_badge', impact_card: impact_card %>
           <%= render 'label_badge', label: impact_card.community if impact_card.community.present? %>
           <%= render 'label_badge', label: impact_card.wicked_problem if impact_card.wicked_problem.present? %>
         </div>
