--- a/app/views/impact_cards/_summary.html.erb
+++ b/app/views/impact_cards/_summary.html.erb
@@ -16,7 +16,7 @@
     <div class="relative print:hidden">
       <div class="flex justify-end items-center mb-4 space-x-2">
         <%= link_to_primary 'Add Initiative', new_impact_card_initiative_path(impact_card), class: 'inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500' %>
-        <%= link_to_primary 'Edit', edit_impact_card_path(impact_card), class: 'inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500' %>
+        <%= link_to_primary 'Edit Card', edit_impact_card_path(impact_card), class: 'inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500' %>
       </div>
     </div>
   </div>
