--- a/app/views/impact_cards/edit.html.erb
+++ b/app/views/impact_cards/edit.html.erb
@@ -19,7 +19,7 @@
             <div class="mt-2">
               <%= form.text_area :description, rows: 3, placeholder: '' %>
             </div>
-            <p class="text-sm/6 text-gray-600">A brief description of the impact card (optional).</p>
+            <p class="text-sm/6 text-gray-600 dark:text-gray-400">A brief description of the impact card (optional).</p>
           </div>
         <% end %>
       <% end %>
