--- a/app/views/initiatives/_form.html.erb
+++ b/app/views/initiatives/_form.html.erb
@@ -33,7 +33,7 @@
             <div class="mt-2">
               <%= form.text_area :description, rows: 3, placeholder: 'Initiative description' %>
             </div>
-            <p class="text-sm/6 text-gray-600">A brief description of the initiative (optional).</p>
+            <p class="text-sm/6 text-gray-600 dark:text-gray-400">A brief description of the initiative (optional).</p>
           </div>
         <% end %>
       <% end %>
@@ -42,7 +42,7 @@
       <div class="grid grid-cols-1 gap-x-8 gap-y-10 border-b border-gray-900/10 dark:border-white/10 pb-12 md:grid-cols-3">
         <div>
           <h3 class="pl-10 text-sm font-semibold text-zinc-950 dark:text-white text-right">Subsystem Tags</h3>
-          <p class="mt-1 text-sm/6 text-gray-600 text-right">Identify relevant subsystem tags for this initiative.</p>
+          <p class="mt-1 text-sm/6 text-gray-600 dark:text-gray-400 text-right">Identify relevant subsystem tags for this initiative.</p>
         </div>
         <div class="grid max-w-2xl grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6 md:col-span-2" id="initiatives-subsystem-tags" data-controller="initiatives-subsystem-tags">
           <%= render 'subsystem_tag_fields' %>
@@ -64,7 +64,7 @@
       <div class="grid grid-cols-1 gap-x-8 gap-y-10 border-b border-gray-900/10 dark:border-white/10 pb-12 md:grid-cols-3">
         <div>
           <h3 class="text-sm font-semibold text-zinc-950 dark:text-white text-right">Contact Details</h3>
-          <p class="mt-1 text-sm/6 text-gray-600 text-right">Enter the main contact for this initiative (optional).</p>
+          <p class="mt-1 text-sm/6 text-gray-600 dark:text-gray-400 text-right">Enter the main contact for this initiative (optional).</p>
         </div>
 
         <div class="grid max-w-2xl grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6 md:col-span-2">
@@ -101,7 +101,7 @@
       <div class="grid grid-cols-1 gap-x-8 gap-y-10 border-b border-gray-900/10 dark:border-white/10 pb-12 md:grid-cols-3">
         <div>
           <h3 class="pl-10 text-sm font-semibold text-zinc-950 dark:text-white text-right">Applicable Date Range</h3>
-          <p class="mt-1 text-sm/6 text-gray-600 text-right">Optional</p>
+          <p class="mt-1 text-sm/6 text-gray-600 dark:text-gray-400 text-right">Optional</p>
         </div>
 
         <div class="grid max-w-2xl grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6 md:col-span-2">
@@ -124,7 +124,7 @@
       <div class="grid grid-cols-1 gap-x-8 gap-y-10 border-b border-gray-900/10 dark:border-white/10 pb-12 md:grid-cols-3">
         <div>
           <h3 class="pl-10 text-sm font-semibold text-zinc-950 dark:text-white text-right">Stakeholders</h3>
-          <p class="mt-1 text-sm/6 text-gray-600 text-right">Identify who might be interested in this initiative.</p>
+          <p class="mt-1 text-sm/6 text-gray-600 dark:text-gray-400 text-right">Identify who might be interested in this initiative.</p>
         </div>
         <div class="grid max-w-2xl grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6 md:col-span-2" id="initiatives-organisations" data-controller="initiatives-organisations">
           <%= render 'organisation_fields' %>
@@ -146,11 +146,11 @@
       <div class="grid grid-cols-1 gap-x-8 gap-y-10 border-b border-gray-900/10 dark:border-white/10 pb-12 md:grid-cols-3">
         <div>
           <h3 class="text-sm font-semibold text-zinc-950 dark:text-white text-right">More</h3>
-          <p class="mt-1 text-sm/6 text-gray-600 text-right">Any additional details (optional).</p>
+          <p class="mt-1 text-sm/6 text-gray-600 dark:text-gray-400 text-right">Any additional details (optional).</p>
         </div>
 
         <div class="grid max-w-2xl grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6 md:col-span-2">
-          <div class="sm:col-span-3">
+          <div class="sm:col-span-8">
             <%= form.label :notes %>
             <div class="mt-2">
               <%= form.rich_textarea :notes %>
