--- a/app/views/organisations/_form.html.erb
+++ b/app/views/organisations/_form.html.erb
@@ -17,7 +17,7 @@
             <div class="mt-2">
               <%= form.text_area :description, rows: 3, placeholder: '' %>
             </div>
-            <p class="text-sm/6 text-gray-600">A brief description of the stakeholder (optional).</p>
+            <p class="text-sm/6 text-gray-600 dark:text-gray-400">A brief description of the stakeholder (optional).</p>
           </div>
         <% end %>
       <% end %>
