--- a/app/views/organisations/show.html.erb
+++ b/app/views/organisations/show.html.erb
@@ -23,7 +23,7 @@
         </div>
         <div class="relative">
           <div class="flex justify-end items-center mb-4">
-            <%= link_to_primary 'Edit', edit_organisation_path(@organisation), class: 'inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500' %>
+            <%= link_to_primary 'Edit Stakeholder', edit_organisation_path(@organisation), class: 'inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500' %>
           </div>
         </div>
       </div>
