1073 reworded button captions

--- a/app/views/accounts/index.html.erb
+++ b/app/views/accounts/index.html.erb
@@ -5,7 +5,7 @@
       <div class="flex justify-between items-center mt-4 ">
         <%= render partial: 'search_form', locals: { record: @q, placeholder: 'Search accounts...' } %>
         <div>
-          <%= link_to_primary 'Create account', new_account_path %>
+          <%= link_to_primary 'Create Account', new_account_path %>
         </div>
       </div>
     </div>
