--- a/app/views/impact_cards/index.html.erb
+++ b/app/views/impact_cards/index.html.erb
@@ -7,7 +7,7 @@
       <div class="flex justify-between items-center mt-4">
         <%= render partial: 'search_form', locals: { record: @q, placeholder: 'Search impact cards...', options: { url: impact_cards_path } } %>
         <div>
-          <%= link_to_primary 'Create impact card', new_impact_card_path %>
+          <%= link_to_primary 'Create Impact Card', new_impact_card_path %>
         </div>
       </div>
     </div>
