--- a/app/views/initiatives/index.html.erb
+++ b/app/views/initiatives/index.html.erb
@@ -6,7 +6,7 @@
       <div class="flex justify-between items-center mt-4 ">
         <%= render partial: 'search_form', locals: { record: @q, placeholder: 'Search initiatives...' } %>
         <div>
-          <%= link_to_primary 'Create initiative', new_initiative_path %>
+          <%= link_to_primary 'Create Initiative', new_initiative_path %>
         </div>
       </div>
     </div>
