--- a/app/views/organisations/index.html.erb
+++ b/app/views/organisations/index.html.erb
@@ -6,7 +6,7 @@
       <div class="flex justify-between items-center mt-4 ">
         <%= render partial: 'search_form', locals: { record: @q, placeholder: 'Search stakeholders...' } %>
         <div>
-          <%= link_to_primary 'Create stakeholder', new_organisation_path %>
+          <%= link_to_primary 'Create Stakeholder', new_organisation_path %>
         </div>
       </div>
     </div>
