--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -5,7 +5,7 @@
       <div class="flex justify-between items-center mt-4 ">
         <%= render partial: 'search_form', locals: { record: @q, placeholder: 'Search team...', search_field: :name_or_email_cont } %>
         <div>
-          <%= link_to_primary 'Invite team member', new_user_invitation_path %>
+          <%= link_to_primary 'Invite Team Member', new_user_invitation_path %>
         </div>
       </div>
     </div>
