--- a/app/views/accounts/_account.html.erb
+++ b/app/views/accounts/_account.html.erb
@@ -11,31 +11,9 @@
           <%= highlight(account.description, params.dig(:q, :name_or_description_cont)) %>
         </div>
         <div class="text-xs/6 text-zinc-600">
-          <%= max_users(account) %>; <%= max_users(account) %>; <%= expires_on(account) %>
+          <%= max_users(account) %>; <%= max_impact_cards(account) %>; <%= expires_on(account) %>
         </div>
       </div>
-    </div>
-    <div class="flex items-center gap-4">
-      <%= render_dropdown_menu do %>
-        <%= dropdown_menu_trigger do %>
-          <span class="text-zinc-900 dark:text-white">
-            <%= render_icon :more %>
-          </span>
-        <% end %>
-
-        <%= dropdown_menu_content do %>
-          <%=
-            dropdown_menu_item do
-              link_to "Modify", edit_account_path(account), class: "block w-full text-sm", data: { turbo: false }
-            end
-          %>
-          <%=
-            dropdown_menu_item do
-              link_to "Switch to", switch_account_path(account), class: "block w-full text-sm", data: { turbo: false }
-            end
-          %>
-        <% end %>
-      <% end %>
     </div>
   </div>
 </li>
