--- a/app/views/reports/_scorecard_selector.html.erb
+++ b/app/views/reports/_scorecard_selector.html.erb
@@ -1,2 +1,2 @@
-<%= label :scorecard_id, report_scorecard_label %>
+<%= label :scorecard_id, report_scorecard_label, class: 'sr-only' %>
 <%= select_impact_card_tag(:scorecard_id,  prompt: 'Select an impact card') %>
