--- a/app/views/reports/_form.html.erb
+++ b/app/views/reports/_form.html.erb
@@ -1,17 +1,17 @@
-<div class="max-w-md mx-auto p-3">
-  <div class="bg-white shadow-md rounded-lg overflow-hidden min-h-80 ">
+<div class="flex max-w-md p-3">
+  <div class="bg-white dark:bg-zinc-950 shadow-md rounded-lg overflow-hidden min-h-80 flex flex-col">
     <div class="bg-gray-800 text-white px-4 py-2">
       <h3 class="text-lg font-semibold flex items-center">
         <i class="fa fa-pie-chart fa-report report-icon mr-2"></i>
         <%= name %>
       </h3>
     </div>
-    <%= form_for :report, url: path, role: 'form', remote: false, class: 'p-4 flex-grow justify-between' do |f| %>
+    <%= form_for :report, url: path, role: 'form', remote: false, class: 'p-4 flex-grow flex flex-col justify-between' do |f| %>
       <div class="mb-4">
-        <p class="text-gray-700"><%= description %></p>
+        <p class="text-gray-700 dark:text-gray-100 mb-4"><%= description %></p>
         <%= yield %>
       </div>
-      <div class="bg-gray-100 px-4 py-2 mt-auto">
+      <div class="bg-gray-100 dark:bg-zinc-950 px-4 py-2 mt-auto flex justify-end">
         <%= f.submit 'Submit', class: 'bg-indigo-600 text-white px-4 py-2 rounded-md hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2' %>
       </div>
     <% end %>
