--- a/app/views/application/_show_page_section.html.erb
+++ b/app/views/application/_show_page_section.html.erb
@@ -1,4 +1,4 @@
-  <%= render 'section' do %>
+  <%= render 'section', first_section: true do %>
     <%= render 'section_header', title: %>
       <%= render 'section_body' do %>
       <div class="sm:col-span-8">
