--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -2,7 +2,7 @@
   <%= form_for(user, html: { role: 'form' }) do |form| %>
     <%= render 'form_header', record: user %>
     <%= render 'form_body' do %>
-      <%= render 'section' do %>
+      <%= render 'section', first_section: true do %>
         <%= render 'section_header', title: 'Overview', subtitle: 'General settings this user.' %>
         <%= render 'section_body' do %>
           <div class="sm:col-span-4">
