--- a/app/views/application/_section.html.erb
+++ b/app/views/application/_section.html.erb
@@ -1,3 +1,3 @@
-<div class="grid grid-cols-1 gap-x-8 gap-y-10 border-b border-gray-900/10 pb-12 md:grid-cols-3">
+<section class="grid grid-cols-1 gap-x-8 gap-y-10 pb-12 pt-10 md:grid-cols-3 <%= 'border-t border-gray-900/10' unless local_assigns[:first_section] %>">
   <%= yield %>
-</div>
+</section>
