--- a/app/views/impact_cards/new.html.erb
+++ b/app/views/impact_cards/new.html.erb
@@ -2,7 +2,7 @@
   <%= form_with model: @impact_card, url: impact_cards_path, scope: :impact_card, class: 'mx-auto max-w-4xl' do |form| %>
     <%= render 'form_header', title: 'New Impact Card - Initial Setup' %>
     <%= render 'form_body' do %>
-      <%= render 'section' do %>
+      <%= render 'section', first_section: true do %>
         <%= render 'section_header', title: 'Overview', subtitle: 'General settings this impact card.' %>
         <%= render 'section_body' do %>
           <div class="sm:col-span-4">
