--- a/app/views/initiatives/show.html.erb
+++ b/app/views/initiatives/show.html.erb
@@ -16,7 +16,7 @@
             </div>
 
             <%- if @initiative.subsystem_tags.present? %>
-              <div class="flex space-x-4">
+              <div class="flex flex-wrap items-start">
                 <%- @initiative.subsystem_tags.each do |subsystem_tag| %>
                   <%= render 'label_badge', label: subsystem_tag %>
                 <%- end %>
