--- a/app/views/initiatives/subsystem_tags/_form.html.erb
+++ b/app/views/initiatives/subsystem_tags/_form.html.erb
@@ -1,5 +1,5 @@
 <div data-controller="labels">
-  <%= form_with(model: [@initiative, label], html: { class: 'form-horizontal record-form border-b border-zinc-950/10 dark:border-white/10 pb-5' }) do |f| %>
+  <%= form_with(model: [@initiative, @subsystem_tag], html: { class: 'form-horizontal record-form border-b border-zinc-950/10 dark:border-white/10 pb-5' }) do |f| %>
     <div class="w-full mb-4">
         <div class="flex items-center justify-between py-4">
           <div class="flex items-center gap-6 w-1/3">
